--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
 								</ul>
 							</article>
 
+							<article class="post featured">
+								<header class="major">
+									<h2><a href="https://github.com/Dzefro/Data-Analyst-PortFolio-Projects/blob/main/P1%20(SQL_Tableau)%20Bank_Loan_Report.rar">PortFolio Project<br />
+									Coffee Shop Sales (SQL,PowerBI) </a></h2>
+									<p>Creation of a comprehensive Coffe Shop Sales report. This project leverages Power BI and SQL to analyze sales data from a coffee shop, identifying key trends in customer purchases, peak sales periods, and product performance.</p>
+								</header>
+								<a href="https://github.com/Dzefro/Data-Analyst-PortFolio-Projects/blob/main/P2%20(SQL_PowerBI)%20Coffee%20Shop%20Sales.rar" class="image main"><img src="images/C1.JPG" width="300" 
+									height="500" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/Dzefro/Data-Analyst-PortFolio-Projects/blob/main/P2%20(SQL_PowerBI)%20Coffee%20Shop%20Sales.rar" class="button large">VIEW PROJECT</a></li>
+								</ul>
+							</article>
+
+
+
 						<!-- Posts -->
 							<section class="posts">
 								<article>
